feat: add missing setup
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
 APP_ENV=local
 APP_DOMAIN=localhost
 APP_PORT=8080
-DB_NAME=template
+DB_NAME=blog
 DB_USERNAME=user
 DB_PASSWORD=pass
 DB_ENDPOINT=localhost:5432
 DB_SSL_MODE=disable
-AWS_ACCESS_KEY_ID=default
-AWS_SECRET_ACCESS_KEY=default
-AWS_REGION=default
