--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
 args_bin = []
 bin = "./bin/main"
-cmd = "go build -o bin/main ."
+cmd = "go build -tags local -o bin/main ."
 delay = 1000
 exclude_dir = ["static", "tmp", "vendor", "testdata"]
 exclude_file = []
