feat: add slack notification when comment is added to an article
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DB_USERNAME=user
 DB_PASSWORD=pass
 DB_ENDPOINT=localhost:5432
 DB_SSL_MODE=disable
+SLACK_BLOG_BOT_TOKEN=xoxb-1234567890-1234567890123-1234567890123-abc123
+SLACK_GENERAL_CHANNEL_ID=C1234567890
