feat: add otel instrumentation
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ APP_ENV=local
 APP_DOMAIN=localhost
 APP_PORT=8080
 APP_METRICS_PORT=2112
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+OTEL_EXPORTER_OTLP_INSECURE=true
 DB_NAME=blog
 DB_USERNAME=user
 DB_PASSWORD=pass
